# rust-wasm-canvas

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json
src/: lib.rs
static/: index.html
