[package]
name = "rust_wasm_canvas"
version = "0.1.0"
authors = ["masayukinii1011"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
js-sys = "0.3.44"
serde = { version = "1.0", features = ["derive"] }
rand = { version="0.7.3", features =["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Window',
  'Document',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'console',
]
